--- a/index2.html
+++ b/index2.html
@@ -271,7 +271,7 @@
 
         .spinner::before {
             transform: translateZ(20px) rotateY(45deg);
-            background-image: url('ast.png'); /* Replace with your image URL */
+            background-image: url('img.jpeg'); /* Replace with your image URL */
             background-size: cover; /* Ensure the image covers the entire element */
             background-position: center; /* Center the image */
             background-color: transparent;
