--- a/index2.html
+++ b/index2.html
@@ -52,6 +52,9 @@
         .header {
             background: -webkit-linear-gradient(right,#ba3cba, #582e58  , #ac31ac,#562a56);
             color: #fff;
+            margin-top: -40px;
+            margin-left: -40px;
+            margin-right: -40px;
             padding: 20px;
             text-align: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
