--- a/index2.html
+++ b/index2.html
@@ -39,6 +39,7 @@
         }
         .container {
             display: none;
+            height: 100%;
             width: 100%;
             max-width: 2100px;
             margin: 20px auto;
@@ -170,7 +171,7 @@
   .monthly-data th, .monthly-data td {
     padding: 15px 20px; /* Adjust padding for better spacing */
     text-align: left;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #0d0b0b;
     position: relative;
   }
   
@@ -197,16 +198,16 @@
   }
   
   .monthly-data td {
-    background-color: #fff; /* White table cell background */
+    background-color: #d5e1df; /* White table cell background */
     transition: background-color 0.3s ease;
   }
   
   .monthly-data tr:hover td {
-    background-color: #f2f2f2; /* Light gray table row hover background */
+    background-color: #b2b2b2; /* Light gray table row hover background */
   }
   
   .monthly-data tr:nth-child(even) td {
-    background-color: #f9f9f9; /* Light gray table row background for even rows */
+    background-color: #e6e2d3; /* Light gray table row background for even rows */
   }
   
   .payment-link {
